--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/css/style.css
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/css/style.css
@@ -5281,55 +5281,73 @@ html.js .flag-waiting .flag-throbber {
   margin-top: 10px;
 }
 
+.block-description--wrapper {
+  display: flex;
+}
+
+.block-description--wrapper {
+  flex-wrap: wrap;
+}
+
 .block-description--text {
-  padding: 12px 0;
-  width: calc(100% - 15px);
+  background-color: #f8f8f8;
+  border-top: 2px solid #c6168d;
+  box-shadow: 0px 0px 15px #d8d8d8;
+  margin-bottom: 10px;
+  width: 100%;
 }
-@media (min-width: 768px) {
+@media (min-width: 33.75em) {
   .block-description--text {
-    margin: 0 15px;
-    padding: 24px 0;
+    margin: 0 15px 40px;
   }
+}
+.block-description--text h2,
+.block-description--text h3 {
+  text-transform: uppercase;
+  font-family: Cachet;
+  margin: 0;
+  font-size: 20px;
+  padding: 30px 0;
+  color: #0089d0;
+}
+.block-description--text h2:after,
+.block-description--text h3:after {
+  margin-left: 10px;
+  color: #0089d0;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: inherit;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  content: "\f138";
+}
+.block-description--text .blog-heading,
+.block-description--text .promo-text {
+  padding: 0 25px 30px;
 }
 @media (min-width: 48em) {
-  .block-description--text h2 {
-    font-size: 26px;
+  .block-description--text .blog-heading,
+  .block-description--text .promo-text {
+    padding: 0 35px 35px 45px;
   }
 }
-@media (min-width: 64em) {
-  .block-description--text h2 {
-    font-size: 30px;
-  }
-}
-.block-description--text h2.with-icon {
-  padding-left: 28px;
-}
-@media (min-width: 48em) {
-  .block-description--text h2.with-icon {
-    padding-left: 32px;
-  }
-}
-@media (min-width: 64em) {
-  .block-description--text h2.with-icon {
-    padding-left: 40px;
-  }
+.block-description--text article a {
+  color: #636466;
 }
 .block-description--text h4 {
-  font-family: "Cachet", Verdana, Geneva, sans-serif;
+  font-family: Cachet;
   font-size: 26px;
   line-height: lh(30, 26);
-  color: #5c2e91;
   margin: 0 0 10px;
   vertical-align: middle;
 }
-@media (min-width: 768px) {
+@media (min-width: tablet) {
   .block-description--text h4 {
     font-size: 36px;
     line-height: lh(40, 36);
   }
 }
 .block-description--text .fa {
-  color: #5c2e91;
   font-size: 24px;
   vertical-align: middle;
   margin-right: 10px;
@@ -5338,14 +5356,14 @@ html.js .flag-waiting .flag-throbber {
   float: left;
   width: auto;
 }
-@media (min-width: 768px) {
+@media (min-width: 33.75em) {
   .block-description--text .fa {
     font-size: 26px;
     max-height: 26px;
     max-width: 26px;
   }
 }
-@media (min-width: 992px) {
+@media (min-width: laptop) {
   .block-description--text .fa {
     font-size: 30px;
     max-height: 30px;
@@ -5363,48 +5381,28 @@ html.js .flag-waiting .flag-throbber {
   max-width: 24px;
   width: auto;
 }
-@media (min-width: 768px) {
+@media (min-width: 33.75em) {
   .block-description--text .field-icon img {
     max-height: 28px;
     max-width: 28px;
   }
 }
-@media (min-width: 992px) {
+@media (min-width: laptop) {
   .block-description--text .field-icon img {
     max-height: 35px;
     max-width: 35px;
   }
 }
 .block-description--text p {
-  font-size: 13px;
-  line-height: lh(20, 13);
+  font-size: 15px;
+  line-height: lh(22, 15);
   margin: 0;
-}
-@media (min-width: 768px) {
-  .block-description--text p {
-    font-size: 15px;
-    line-height: lh(22, 15);
-  }
+  color: #424242;
 }
 .block-description--text .content {
   margin: 0 0 10px 0;
 }
-.block-description--text .field-sb-link a {
-  font-size: 15px;
-  display: inline-block;
-  vertical-align: top;
-  line-height: lh(20.1, 15);
-  position: relative;
-}
-.block-description--text .field-sb-link a:after {
-  content: '>';
-  display: inline-block;
-  vertical-align: text-top;
-  font-size: inherit;
-  line-height: inherit;
-  padding: 0 0 0 2px;
-}
-@media (min-width: 768px) {
+@media (min-width: 33.75em) {
   .block-description--text .field-sb-body {
     font-size: 15px;
     line-height: lh(22, 15);
@@ -5416,54 +5414,39 @@ html.js .flag-waiting .flag-throbber {
 .block-description--2 .block-description--text:nth-child(2) {
   margin-right: 0;
 }
-@media (min-width: 768px) {
+@media (min-width: 33.75em) {
   .block-description--2 .block-description--text {
     width: calc(100% / 2 - 15px);
   }
 }
-.block-description--3 .block-description--text {
-  border-top: 1px solid #333333;
-  border-bottom: 1px solid #333333;
-  border-top: 1px solid #333333;
-  border-bottom: 1px solid #333333;
-}
-.block-description--3 .block-description--text .field-branch-am,
-.block-description--3 .block-description--text .field-sb-body {
-  padding: 15px 0;
-}
-.block-description--3 .block-description--text .field-sb-link {
-  display: block;
-  width: 100%;
-}
-.block-description--3 .block-description--text h2 {
-  font-family: "Cachet", Verdana, Geneva, sans-serif;
-  margin-top: 0px;
-  font-size: 22px;
-  color: #636466;
-  text-align: left;
-}
-@media (min-width: 768px) {
+@media (min-width: 48em) {
   .block-description--3 .block-description--text {
     width: calc(100% / 3 - 30px);
     position: relative;
-    margin-bottom: 10px;
+  }
+  .block-description--3 .block-description--text .block-share {
+    margin: 0 0 20px 0;
+  }
+  .block-description--3 .block-description--text .field-sb-link a {
+    position: absolute;
+    bottom: 10px;
   }
 }
 .block-description--4 {
   display: block;
 }
-@media (min-width: 768px) {
+@media (min-width: 48em) {
   .block-description--4 {
     display: flex;
   }
 }
-@media (min-width: 768px) {
+@media (min-width: 48em) {
   .block-description--4 .wrapper {
     display: flex;
     flex-wrap: wrap;
   }
 }
-@media (min-width: 768px) {
+@media (min-width: 33.75em) {
   .block-description--4 .block-description--text {
     width: calc(100% / 4 - 30px);
   }
@@ -5482,16 +5465,6 @@ html.js .flag-waiting .flag-throbber {
 }
 .block-description--4 .field-icon .field-image {
   width: 100%;
-}
-
-.block-description--wrapper--outline--top .block-description--text {
-  border-top: 1px solid #4f4f4f;
-}
-.block-description--wrapper--outline--top.paragraph-1c-wrapper {
-  border-top: 1px solid #4f4f4f;
-}
-.block-description--wrapper--outline--top.paragraph-1c-wrapper .field-prgf-1c-description {
-  padding-top: 24px;
 }
 
 .block-description--4 {
@@ -16175,6 +16148,100 @@ body #sidebar-nav > li.dropdown > ul.dropdown-menu > li.tickets {
   font-family: "Cachet", Arial, sans-serif;
 }
 
+.content-banner {
+  background: #f8f8f8;
+  box-shadow: 0 0 15px #d8d8d8;
+  margin: 10px 0;
+  border-top: 2px solid #c6168d;
+}
+@media (min-width: 768px) {
+  .content-banner {
+    margin: 40px 0;
+  }
+}
+.content-banner.page-title:before {
+  background: #f8f8f8;
+}
+.content-banner .banner-title {
+  color: #4a4a4a;
+  font-size: 20px;
+  margin: 0 25px 15px;
+}
+@media (min-width: 768px) {
+  .content-banner .banner-title {
+    margin: 0 45px 15px;
+    font-size: 30px;
+  }
+}
+.content-banner .banner-title a {
+  text-decoration: none;
+}
+.content-banner .banner-title a:after {
+  margin-left: 5px;
+  color: #0089d0;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: inherit;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  content: "\f138";
+}
+.content-banner .richtext {
+  padding: 0 25px 0;
+  color: #4a4a4a;
+  font-size: 15px;
+  line-height: 20px;
+}
+@media (min-width: 768px) {
+  .content-banner .richtext {
+    padding: 0 45px 0;
+  }
+}
+.content-banner .richtext p {
+  font-size: 15px;
+  line-height: 20px;
+}
+.content-banner .content-prgf-image {
+  position: relative;
+  right: inherit;
+  left: auto;
+  margin-right: -30px;
+  margin-left: 0;
+  padding: 0;
+  height: 100%;
+}
+@media (min-width: 768px) {
+  .content-banner .content-prgf-image {
+    position: absolute;
+    left: 50%;
+    padding-right: 30px;
+    height: 100%;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+}
+@media (min-width: 1200px) {
+  .content-banner .content-prgf-image {
+    padding-right: 100px;
+  }
+}
+.content-banner .content-prgf-image img {
+  width: 100%;
+}
+.content-banner .content-prgf-image figure {
+  position: relative;
+  overflow: hidden;
+  margin: 0 -30px 0 -20px;
+  padding: 0;
+  height: 100%;
+}
+@media (min-width: 1200px) {
+  .content-banner .content-prgf-image figure {
+    margin-right: -100px;
+  }
+}
+
 /* Give page */
 .path-give .hero-image .button {
   border-radius: 4px;
@@ -16419,6 +16486,10 @@ section.content {
 }
 .paragraph--type--sidebar-menu .nav-level-3 > li {
   font-weight: bold;
+}
+
+.paragraph--type--simple-content iframe {
+  width: 100% !important;
 }
 
 /*# sourceMappingURL=style.css.map */
