OS-15: add locations filter by amenities support to Lily theme.

--- a/themes/openy_themes/openy_lily/sass/style.scss
+++ b/themes/openy_themes/openy_lily/sass/style.scss
@@ -50,6 +50,7 @@
 @import 'paragraphs/1c';
 @import 'paragraphs/amenities';
 @import 'paragraphs/lto';
+@import 'paragraphs/location_by_amenities';
 
 // Lily styles
 @import 'global/mixins';
