--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/templates/page/html--header.html.html.twig
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/templates/page/html--header.html.html.twig
@@ -39,6 +39,7 @@
     {% for style in styles %}
       {{ style }}
     {% endfor %}
+    <link href="https://use.fontawesome.com/95fd5fcc01.css" media="all" rel="stylesheet">
     {% for script in scripts %}
       {{ script }}
     {% endfor %}
