--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/css/style.css
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/css/style.css
@@ -761,7 +761,7 @@ body {
   position: fixed;
   top: 0;
   bottom: 0;
-  z-index: 1001;
+  z-index: 1;
   display: block !important;
   visibility: visible;
   overflow: hidden;
@@ -978,7 +978,7 @@ body {
 
 @media (min-width: 48em) and (max-width: 61.9375em) {
   .navbar-nav > li {
-    float: none;
+    /*float: none;*/
   }
 }
 @media (min-width: 62em) and (max-width: 74.9375em) {
@@ -6058,9 +6058,9 @@ html.js .path-account .ajax-progress .throbber, html.js .path-account .flag-wait
   left: 150px;
 }
 
-@media (min-width: 62em) {
+@media (min-width: 47.9375em) {
   body {
-    padding-top: 83px !important;
+    padding-top: 100px !important;
     -webkit-transition: padding-top 0.2s ease;
     -moz-transition: padding-top 0.2s ease;
     -ms-transition: padding-top 0.2s ease;
@@ -6071,13 +6071,13 @@ html.js .path-account .ajax-progress .throbber, html.js .path-account .flag-wait
     padding-top: 55px !important;
   }
 }
-@media (min-width: 0) and (max-width: 62em) {
+@media (min-width: 0) and (max-width: 47.9375em) {
   body {
-    padding-top: 52px !important;
+    padding-top: 80px !important;
     max-width: 100%;
   }
 }
-@media (min-width: 62em) {
+@media (min-width: 47.9375em) {
   body.toolbar-fixed.toolbar-horizontal {
     padding-top: 122px !important;
     -webkit-transition: padding-top 0.2s ease;
@@ -6213,7 +6213,7 @@ body.toolbar-fixed.toolbar-horizontal.toolbar-tray-open.tiny-header .viewport .t
 #side-area ul li .dropdown-menu.open li.menu-item-online-store---rewards a {
   white-space: initial;
 }
-@media (min-width: 0) and (max-width: 62em) {
+@media (min-width: 0) and (max-width: 47.9375em) {
   #side-area .section-icon {
     display: none;
   }
@@ -6246,7 +6246,7 @@ header#page-head:after {
   display: table;
   clear: both;
 }
-@media (min-width: 0) and (max-width: 62em) {
+@media (min-width: 0) and (max-width: 47.9375em) {
   header#page-head {
     position: relative;
     z-index: 999;
@@ -6278,13 +6278,18 @@ header#page-head .top-navs .nav-global {
   min-height: 100px;
   width: 100%;
 }
+@media (min-width: 0) and (max-width: 47.9375em) {
+  header#page-head .top-navs .nav-global {
+    min-height: 80px;
+  }
+}
 header#page-head .top-navs .nav-global .navbar-header {
   padding: 5px 0 13px;
 }
 header#page-head .top-navs .nav-global .navbar-header .navbar-toggler {
   display: none;
 }
-@media (min-width: 0) and (max-width: 62em) {
+@media (min-width: 0) and (max-width: 47.9375em) {
   header#page-head .top-navs .nav-global .navbar-header {
     width: 100%;
     padding: 0 !important;
@@ -6354,12 +6359,12 @@ header#page-head .top-navs .nav-wrapper {
   display: none;
   position: relative;
 }
-@media (min-width: 62em) {
+@media (min-width: 47.9375em) {
   header#page-head .top-navs .nav-wrapper {
     display: block;
   }
 }
-@media (min-width: 0) and (max-width: 62em) {
+@media (min-width: 0) and (max-width: 47.9375em) {
   header#page-head .top-navs .nav-wrapper {
     min-height: 0;
   }
@@ -6386,7 +6391,7 @@ header#page-head .top-navs .nav-wrapper .main-nav #block-openy-lily-main-menu {
     padding: 0 100px;
   }
 }
-@media (min-width: 0) and (max-width: 62em) {
+@media (min-width: 0) and (max-width: 47.9375em) {
   header#page-head .top-navs .nav-wrapper .main-nav #block-openy-lily-main-menu {
     display: none !important;
   }
@@ -6501,7 +6506,7 @@ header#page-head .top-navs .nav-wrapper .main-nav #block-openy-lily-main-menu .n
 header#page-head .top-navs .nav-wrapper .main-nav #block-openy-lily-main-menu .nav.row-level-2 li a .section-icon {
   display: none;
 }
-@media (min-width: 0) and (max-width: 62em) {
+@media (min-width: 0) and (max-width: 47.9375em) {
   header#page-head .top-navs #block-topmenu2,
   header#page-head .top-navs #block-anonymoususersmenu--2,
   header#page-head .top-navs #block-anonymoususersmenu,
@@ -6519,13 +6524,25 @@ header#page-head .top-navs #block-cccuseraccountmenu--2 .nav li a,
 header#page-head .top-navs #block-cccuseraccountmenu .nav li a {
   color: #777777;
   border-top: 2px solid transparent;
-  line-height: 50px;
+  line-height: 68px;
   font-size: 16px;
   -webkit-transition: all 0.2s linear;
   -moz-transition: all 0.2s linear;
   -ms-transition: all 0.2s linear;
   -o-transition: all 0.2s linear;
   transition: all 0.2s linear;
+}
+@media (min-width: 48em) and (max-width: 61.9375em) {
+  header#page-head .top-navs #block-topmenu2 .nav li a,
+  header#page-head .top-navs #block-anonymoususersmenu--2 .nav li a,
+  header#page-head .top-navs #block-anonymoususersmenu .nav li a,
+  header#page-head .top-navs #block-openy-lily-user-menu .nav li a,
+  header#page-head .top-navs #block-cccuseraccountmenu--2 .nav li a,
+  header#page-head .top-navs #block-cccuseraccountmenu .nav li a {
+    margin-top: 0;
+    padding: 15px 6px;
+    font-size: 13px;
+  }
 }
 header#page-head .top-navs #block-topmenu2 .nav li a:hover,
 header#page-head .top-navs #block-anonymoususersmenu--2 .nav li a:hover,
@@ -6570,7 +6587,7 @@ header#page-head .top-navs #block-topmenu2 .nav li:first-child a,
 header#page-head .top-navs #block-anonymoususersmenu .nav li:first-child a,
 header#page-head .top-navs #block-anonymoususersmenu--2 .nav li:first-child a,
 header#page-head .top-navs #block-openy-lily-user-menu .nav li:first-child a {
-  padding: 7px 15px;
+  padding: 4px 15px;
   border-radius: 5px;
   background-color: #b92f9e;
   text-transform: capitalize;
@@ -6579,7 +6596,7 @@ header#page-head .top-navs #block-openy-lily-user-menu .nav li:first-child a {
   line-height: 20px;
   color: white;
   text-shadow: none;
-  margin: 24px 5px 0 0;
+  margin: 36px 5px 0 0;
   border-top: none;
 }
 header#page-head .top-navs #block-topmenu2 .nav li:first-child a:hover,
@@ -6616,7 +6633,7 @@ header#page-head #block-openy-lily-branding .ymca-branding-slogan {
 .is-camp header#page-head #block-openy-lily-branding .ymca-branding-slogan {
   color: #f47820;
 }
-@media (min-width: 0) and (max-width: 62em) {
+@media (min-width: 0) and (max-width: 47.9375em) {
   header#page-head #block-openy-lily-branding .ymca-branding-slogan {
     display: none;
   }
@@ -6671,20 +6688,20 @@ header#page-head.expanded-search.tiny .main-nav.affix {
   display: block;
   overflow: hidden;
   box-sizing: content-box;
-  margin: 12px 0 5px 0;
+  margin: 7px 0 5px 0;
   padding: 5px 0 0 30px;
   width: 220px;
   height: 72%;
   background: url(../img/ymca-logo-full.svg) no-repeat 12px 0;
   background-size: contain;
 }
-@media (max-width: 991px) {
+@media (min-width: 0) and (max-width: 47.9375em) {
   .navbar-brand {
-    left: 30%;
+    left: 35%;
     float: none;
     margin-left: -24px;
     padding: 0;
-    height: 80%;
+    height: 70%;
     background-position: left top;
     background-size: contain;
   }
@@ -8917,10 +8934,15 @@ body.path-search #block-mainpagecontent li {
   padding: 20px 100px;
   z-index: 9999;
 }
+@media (min-width: 47.9375em) and (max-width: 61.9375em) {
+  #search-box.expanded-search {
+    padding: 20px 15px;
+  }
+}
 .toolbar-fixed #search-box {
   top: 39px;
 }
-@media (min-width: 0) and (max-width: 62em) {
+@media (min-width: 0) and (max-width: 47.9375em) {
   #search-box {
     display: none;
   }
