--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/misc/_header.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/misc/_header.scss
@@ -1,18 +1,18 @@
 body {
-  @include breakpoint ($tablet-start) {
-    padding-top: 83px !important;
+  @include breakpoint (767px) {
+    padding-top: 100px !important;
     @include transition(padding-top 0.2s ease);
     &.tiny-header {
       padding-top: 55px !important;
     }
   }
-  @include breakpoint (0 $tablet-start) {
-    padding-top: 52px !important;
+  @include breakpoint (0 767px) {
+    padding-top: 80px !important;
     max-width: 100%;
   }
   &.toolbar-fixed {
     &.toolbar-horizontal {
-      @include breakpoint ($tablet-start) {
+      @include breakpoint (767px) {
         padding-top: 122px !important;
         @include transition(padding-top 0.2s ease);
         &.tiny-header {
@@ -163,7 +163,7 @@ body {
     }
   }
   .section-icon {
-    @include breakpoint (0 $tablet-start) {
+    @include breakpoint (0 767px) {
       display: none;
     }
   }
@@ -193,7 +193,7 @@ header#page-head {
   @include clearfix;
   width: 100%;
   @include cachet();
-  @include breakpoint (0 $tablet-start) {
+  @include breakpoint (0 767px) {
     position: relative;
     z-index: 999;
   }
@@ -217,12 +217,15 @@ header#page-head {
       background-color: $gray-light;
       min-height: 100px;
       width: 100%;
+      @include breakpoint (0 767px) {
+        min-height: 80px;
+      }
       .navbar-header {
         padding: 5px 0 13px;
         .navbar-toggler {
           display: none;
         }
-        @include breakpoint (0 $tablet-start) {
+        @include breakpoint (0 767px) {
           width: 100%;
           padding: 0 !important;
           height: 52px !important;
@@ -294,10 +297,10 @@ header#page-head {
       min-height: 62px;
       z-index: 998;
       display: none;
-      @include breakpoint ($tablet-start) {
+      @include breakpoint (767px) {
         display: block;
       }
-      @include breakpoint (0 $tablet-start) {
+      @include breakpoint (0 767px) {
         min-height: 0;
       }
       position: relative;
@@ -315,7 +318,7 @@ header#page-head {
           @include breakpoint($desktop) {
             padding: 0 100px;
           }
-          @include breakpoint (0 $tablet-start) {
+          @include breakpoint (0 767px) {
             display: none !important;
           }
           .nav {
@@ -435,7 +438,7 @@ header#page-head {
     #block-openy-lily-user-menu,
     #block-cccuseraccountmenu--2,
     #block-cccuseraccountmenu {
-      @include breakpoint (0 $tablet-start) {
+      @include breakpoint (0 767px) {
         display: none !important;
       }
       .nav {
@@ -443,8 +446,13 @@ header#page-head {
           a {
             color: $gray-dark;
             border-top: 2px solid transparent;
-            line-height: 50px;
+            line-height: 68px;
             font-size: 16px;
+            @include breakpoint (768px 991px) {
+              margin-top: 0;
+              padding: 15px 6px;
+              font-size: 13px;
+            }
             @include transition(all 0.2s linear);
             &:hover {
               border-top: 2px solid #aa228d;
@@ -493,7 +501,7 @@ header#page-head {
         li {
           &:first-child {
             a {
-              padding: 7px 15px;
+              padding: 4px 15px;
               border-radius: 5px;
               background-color: $main-purple;
               text-transform: capitalize;
@@ -502,7 +510,7 @@ header#page-head {
               line-height: 20px;
               color: white;
               text-shadow: none;
-              margin: 24px 5px 0 0;
+              margin: 36px 5px 0 0;
               border-top: none;
               &:hover {
                 border-top: none;
@@ -536,7 +544,7 @@ header#page-head {
       .is-camp & {
         color: #f47820;
       }
-      @include breakpoint (0 $tablet-start) {
+      @include breakpoint (0 767px) {
         display: none;
       }
     }
@@ -624,18 +632,18 @@ header#page-head {
   display: block;
   overflow: hidden;
   box-sizing: content-box;
-  margin: 12px 0 5px 0;
+  margin: 7px 0 5px 0;
   padding: 5px 0 0 30px;
   width: 220px;
   height: 72%;
   background: url(../img/ymca-logo-full.svg) no-repeat 12px 0;
   background-size: contain;
-  @media (max-width: 991px) {
-    left: 30%;
+  @include breakpoint(0 767px) {
+    left: 35%;
     float: none;
     margin-left: -24px;
     padding: 0;
-    height: 80%;
+    height: 70%;
     background-position: left top;
     background-size: contain;
   }
