--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/misc/_search.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/misc/_search.scss
@@ -67,11 +67,14 @@ body.path-search {
     max-height: 88px;
     padding: 20px 100px;
     z-index: 9999;
+    @include breakpoint (767px 991px) {
+      padding: 20px 15px;
+    }
   }
   .toolbar-fixed & {
     top: 39px;
   }
-  @include breakpoint (0 $tablet-start) {
+  @include breakpoint (0 767px) {
     display: none;
   }
 }
