--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/style.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/style.scss
@@ -29,7 +29,7 @@
 /*@import 'modules/schedules';*/
 @import 'modules/dialog';
 @import 'modules/landing';
-@import 'modules/membership';
+/*@import 'modules/membership';*/
 @import 'modules/camp';
 @import 'modules/global-search';
 @import 'modules/user_login';
@@ -69,7 +69,7 @@
 @import 'misc/alerts';
 @import 'misc/frontpage';
 @import 'misc/location';
-@import 'misc/membership';
+/*@import 'misc/membership';*/
 @import 'misc/node-preview';
 @import 'misc/search';
 @import 'misc/program';
