--- a/themes/openy_themes/openy_lily/sass/style.scss
+++ b/themes/openy_themes/openy_lily/sass/style.scss
@@ -45,12 +45,15 @@
 @import 'modules/block-description';
 @import 'modules/columns';
 @import 'modules/simple_content';
+@import 'modules/event';
 
 // Paragraphs
 @import 'paragraphs/1c';
 @import 'paragraphs/amenities';
 @import 'paragraphs/lto';
 @import 'paragraphs/location_by_amenities';
+@import 'paragraphs/upcoming-events';
+@import 'paragraphs/event-post-listing';
 
 // Lily styles
 @import 'global/mixins';
