update styles to fit over look

--- a/themes/openy_themes/openy_rose/scss/paragraphs/_upcoming-events.scss
+++ b/themes/openy_themes/openy_rose/scss/paragraphs/_upcoming-events.scss
@@ -10,9 +10,9 @@
   & > .paragraph-container-wrapper > h2 {
     padding-left: 15px;
   }
-  .field-prgf-block {
-    display: inline-block;
-  }
+  // .field-prgf-block {
+  //  display: inline-block;
+  // }
   header a {
     display: block;
     text-align: right;
