--- a/themes/openy_themes/openy_rose/css/styles.css
+++ b/themes/openy_themes/openy_rose/css/styles.css
@@ -7521,8 +7521,7 @@ article .node--view-mode-flexible-content h2 a span {
   font-family: "Cachet W01 Bold", Verdana, sans-serif;
   color: #fff;
   background-color: #0060af;
-  border: 4px solid #fff;
-  border-radius: 8px;
+  border: 1px solid #fff;
 }
 .node--type-event.node--view-mode-teaser .event-date-month .event-date {
   font-size: 30px;
@@ -7535,7 +7534,6 @@ article .node--view-mode-flexible-content h2 a span {
 }
 .node--type-event.node--view-mode-teaser .field-event-image img {
   display: inline-block;
-  border-radius: 10px;
 }
 .node--type-event.node--view-mode-teaser h2 {
   margin: 10px 0 5px;
@@ -7901,11 +7899,9 @@ article .node--view-mode-flexible-content h2 a span {
 }
 
 .paragraph--type--upcoming-events h2 {
-  display: inline-block;
-  color: #231f20;
-  font-size: 30px;
-  line-height: 37px;
-  text-transform: uppercase;
+  letter-spacing: normal;
+  text-transform: none;
+  text-align: left;
 }
 .paragraph--type--upcoming-events > .paragraph-container-wrapper > h2 {
   padding-left: 15px;
