--- a/themes/openy_themes/openy_lily/sass/paragraphs/_upcoming-events.scss
+++ b/themes/openy_themes/openy_lily/sass/paragraphs/_upcoming-events.scss
@@ -1,18 +1,20 @@
 // OpenY Paragraph Latest Event Posts - Upcoming events
 .paragraph--type--upcoming-events {
   h2 {
-    display: inline-block;
-    color: $brown;
-    font-size: 30px;
-    line-height: 37px;
-    text-transform: uppercase;
+    //display: inline-block;
+    //color: $brown;
+    //font-size: 30px;
+    //line-height: 37px;
+    letter-spacing: normal;
+    text-transform: none;
+    text-align: left;
   }
   & > .paragraph-container-wrapper > h2 {
     padding-left: 15px;
   }
-  .field-prgf-block {
-    display: inline-block;
-  }
+  // .field-prgf-block {
+  //   display: inline-block;
+  // }
   header a {
     display: block;
     text-align: right;
