--- a/themes/openy_themes/openy_rose/scss/modules/_event.scss
+++ b/themes/openy_themes/openy_rose/scss/modules/_event.scss
@@ -115,8 +115,8 @@
       @include cachet-bold();
       color: $white;
       background-color: $dark-blue;
-      border: 4px solid $white;
-      border-radius: 8px;
+      border: 1px solid $white;
+      // border-radius: 8px;
       .event-date {
         font-size: 30px;
         line-height: 35px;
@@ -129,7 +129,7 @@
     }
     .field-event-image img {
       display: inline-block;
-      border-radius: 10px;
+      //border-radius: 10px;
     }
     h2 {
       margin: 10px 0 5px;
