--- a/docroot/modules/custom/ymca_camp_du_nord/templates/cdn-confirmation-page.html.twig
+++ b/docroot/modules/custom/ymca_camp_du_nord/templates/cdn-confirmation-page.html.twig
@@ -21,7 +21,7 @@
   <div class="container">
     <div class="col-xs-12">
     {% if data %}
-      <div class="description">{{ 'You are going to book'|t }} <span class="cabin-name">"{{ data.cabin_name }}"</span> {{ 'for next dates:'|t }}</div>
+      <div class="description">{{ 'You are going to book'|t }} <span class="cabin-name">"{{ data.cabin_name }}"</span> {{ 'for the following dates:'|t }}</div>
       <ul>
       {% for date in data.dates %}
         {% if date.available %}
