--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/css/style.css
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/css/style.css
@@ -15630,4 +15630,14 @@ p.button {
   color: #333;
 }
 
+body.independent-footer {
+  padding-top: 0 !important;
+}
+body.independent-footer #block-openy-lily-footersocialblock {
+  display: none;
+}
+body.independent-footer #page-footer {
+  padding-top: 30px;
+}
+
 /*# sourceMappingURL=style.css.map */
