Add theming for cabin filter for old theme

--- a/docroot/themes/custom/ymca/sass/misc/_camp_du_nord.scss
+++ b/docroot/themes/custom/ymca/sass/misc/_camp_du_nord.scss
@@ -105,6 +105,7 @@
     }
   }
   .form-item-village,
+  .form-item-cabin,
   .form-item-capacity {
     border: 1px solid #dadada;
     background-color: #fff;
