--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/legacy/_camp_du_nord.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/legacy/_camp_du_nord.scss
@@ -105,6 +105,7 @@
     }
   }
   .form-item-village,
+  .form-item-cabin,
   .form-item-capacity {
     border: 1px solid #dadada;
     background-color: #fff;
