--- a/themes/openy_themes/openy_lily/css/style.css
+++ b/themes/openy_themes/openy_lily/css/style.css
@@ -895,6 +895,55 @@ body {
     padding-right: 15px;
   }
 }
+.viewport .openy-gtranslate {
+  display: none;
+  vertical-align: text-bottom;
+}
+.viewport .openy-gtranslate .goog-te-gadget-simple {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+}
+.viewport .openy-gtranslate .goog-te-gadget-simple .goog-te-gadget-icon {
+  display: none;
+}
+.viewport .openy-gtranslate .goog-te-gadget-simple .goog-te-menu-value {
+  display: inline-block;
+  line-height: 82px;
+  padding: 0 10px;
+  vertical-align: text-bottom;
+  font-family: "Cachet", Verdana, Geneva, sans-serif;
+  font-size: 16px;
+  color: #777777;
+  border-top: 2px solid transparent;
+  -webkit-transition: all 0.2s linear;
+  -moz-transition: all 0.2s linear;
+  -ms-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+}
+.viewport .openy-gtranslate .goog-te-gadget-simple .goog-te-menu-value img, .viewport .openy-gtranslate .goog-te-gadget-simple .goog-te-menu-value span:not(:first-of-type) {
+  display: none;
+}
+.viewport .openy-gtranslate .goog-te-gadget-simple .goog-te-menu-value:after {
+  content: '\f107';
+  font-family: 'FontAwesome';
+  font-size: 18px;
+  padding-left: 5px;
+}
+.viewport .openy-gtranslate .goog-te-gadget-simple .goog-te-menu-value:hover {
+  background-color: #fff;
+  color: #000;
+  border-top: 2px solid #aa228d;
+}
+@media (min-width: 62em) {
+  .viewport .secondary_menu {
+    float: right;
+  }
+  .viewport .secondary_menu nav, .viewport .secondary_menu .openy-gtranslate {
+    display: inline-block;
+  }
+}
 .viewport .page-head__main-menu .dropdown-menu > li > a:focus,
 .viewport .page-head__main-menu .dropdown-menu > li > a:hover {
   background: none;
@@ -977,6 +1026,10 @@ body {
   font-size: 14px;
   line-height: 20px;
   text-transform: none;
+}
+
+.tiny-header .viewport .openy-gtranslate .goog-te-gadget-simple .goog-te-menu-value {
+  line-height: 51px;
 }
 
 @media (min-width: 48em) and (max-width: 61.9375em) {
