--- a/docroot/modules/custom/ymca_camp_du_nord/templates/cdn-results-calendar.html.twig
+++ b/docroot/modules/custom/ymca_camp_du_nord/templates/cdn-results-calendar.html.twig
@@ -7,7 +7,7 @@
  */
 #}
 <div class="cdn-calendar-list-row{% if data.is_booked %} booked{% endif %}" data-id="{{ data.id }}" data-pid="{{ data.pid }}" data-total_capacity="{{ data.total_capacity }}" data-village_id="{{ data.village_id }}">
-  <a href="#" class="cdn-prs-product-mobile {% if data.is_selected %}selected{% endif %}">
+  <a href="#" class="cdn-prs-product-mobile {{ data.date }} {% if data.is_selected %}selected{% endif %}">
     <div class="date">
       <div class="month">{{ data.date1 }}</div>
       <div class="day"><span class="number">{{ data.date2 }}</span> <span class="weekday">{{ data.date3 }}</span></div>
