--- a/docroot/themes/custom/ymca/templates/field/field--block-content--field-schedule-documents--location_schedule.html.twig
+++ b/docroot/themes/custom/ymca/templates/field/field--block-content--field-schedule-documents--location_schedule.html.twig
@@ -46,7 +46,7 @@
         {% if multiple %}
         <div>
           {% endif %}
-          <ul>
+          <ul class="schedule">
             {% for item in items %}
               <li{{ item.attributes }}>{{ item.content }}</li>
             {% endfor %}
