--- a/docroot/themes/custom/ymca/css/style.css
+++ b/docroot/themes/custom/ymca/css/style.css
@@ -1687,7 +1687,7 @@ li.current.home > a:focus, li.current.home > a:hover {
   border: 0;
   border-left: 0;
   border-radius: 0;
-  background: #383838;
+  background: #383838 !important;
   font-size: 16px;
   font-family: 'Cachet', Verdana, Arial, sans-serif;
   -webkit-transition: font-size .2s ease-out,height .2s ease-out;
@@ -2739,6 +2739,7 @@ img.alignRight {
   text-transform: uppercase;
   font-weight: bold;
   font-family: 'Cachet', Verdana, Arial, sans-serif;
+  padding-top: 40px;
 }
 .back-link a {
   color: #fff;
