OS-25 Google Translate code review fixes

--- a/themes/openy_themes/openy_lily/css/style.css
+++ b/themes/openy_themes/openy_lily/css/style.css
@@ -890,6 +890,11 @@ body {
   display: none;
 }
 
+.goog-te-menu-frame.open {
+  left: 0;
+  top: 150px;
+}
+
 @media (min-width: 75em) {
   .viewport .page-head__top-menu {
     padding-right: 15px;
