--- a/themes/openy_themes/openy_rose/css/styles.css
+++ b/themes/openy_themes/openy_rose/css/styles.css
@@ -969,6 +969,11 @@ body {
   display: none;
 }
 
+.goog-te-menu-frame.open {
+  left: 0;
+  top: 150px;
+}
+
 .viewport .openy-gtranslate {
   display: inline-block;
   vertical-align: bottom;
