--- a/themes/openy_themes/openy_rose/scss/modules/_menu.scss
+++ b/themes/openy_themes/openy_rose/scss/modules/_menu.scss
@@ -176,6 +176,10 @@
   }
 }
 
+.goog-te-menu-frame.open {
+  left: 0;
+  top: 150px;
+}
 .viewport {
   .openy-gtranslate {
     display: inline-block;
