--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/legacy/_legacy.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/legacy/_legacy.scss
@@ -41,6 +41,21 @@
     width: auto;
   }
 }
+
+.container, .padded-content-container {
+  padding: 0 30px;
+  max-width: none;
+  width: auto;
+  @media (min-width: 1200px) {
+    padding-right: 100px;
+    padding-left: 100px;
+  }
+}
+
+.container .container {
+  padding: 0;
+}
+
 .path-locations,
 .path-news {
   .container, .padded-content-container {
