--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/global/_colors.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/global/_colors.scss
@@ -61,6 +61,7 @@ $grey23: #d2d2d2;
 $grey24: #dbdbdb;
 $grey25: #333333;
 $grey26: #3a3a3a;
+$grey27: #e0e0e0;
 
 $black2: #1d1d1b;
 $black3: #434343;
