Fix color variables

--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/legacy/_legacy.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/legacy/_legacy.scss
@@ -209,7 +209,7 @@ section.content {
   background: $grey27;
   margin: 0 0 20px;
   .current > a {
-    color: #333;
+    color: $grey25;
     border: 0;
     &:after {
       position: absolute;
