--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/paragraphs/_paragraphs.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/paragraphs/_paragraphs.scss
@@ -662,7 +662,17 @@
     font-family: 'YMCA';
   }
 }
-
+.field-prgf-description {
+  h2 a:after {
+    position: relative;
+    top: -1px;
+    margin-left: 10px;
+    content: 'o';
+    vertical-align: middle;
+    font-size: 20px;
+    font-family: 'YMCA';
+  }
+}
 .paragraph--type--featured-highlights {
   article.featured-highlights-block {
     max-width: 100%;
