--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/legacy/_legacy.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/legacy/_legacy.scss
@@ -343,3 +343,15 @@ body.independent-footer {
     padding-top: 30px;
   }
 }
+
+a[href$=pdf]:after,
+a[href*=".pdf?"]:after,
+.lead-copy li a[href$=pdf]:after,
+.lead-copy li a[href*=".pdf?"]:after,
+.pdf-link:after {
+  margin: 0 5px;
+  content: 'p';
+  text-transform: none;
+  font-weight: normal;
+  font-family: 'YMCA';
+}
