Fix styles for sidebar promo blocks

--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/templates/ymca-blocks/promo-block.html.twig
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/templates/ymca-blocks/promo-block.html.twig
@@ -23,7 +23,7 @@
       </div>
       <div class="blog-heading">
         <h3><span>{{ header }}</span></h3>
-        <p>{{ content }}</p>
+        <div class="promo-text">{{ content }}</div>
       </div>
     </div>
   {% if link %}
