--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/css/style.css
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/css/style.css
@@ -10331,6 +10331,16 @@ a.sports-icon.floor-hockey {
   font-family: 'YMCA';
 }
 
+.field-prgf-description .inner-wrapper {
+  background: #f0f0f0;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+}
+.field-prgf-description .inner-wrapper .promo-text {
+  padding-bottom: 10px;
+}
+.field-prgf-description .inner-wrapper .promo-text p {
+  margin: 0;
+}
 .field-prgf-description h2 a:after {
   position: relative;
   top: -1px;
