OS-25 Cache issue

--- a/themes/openy_themes/openy_rose/css/styles.css
+++ b/themes/openy_themes/openy_rose/css/styles.css
@@ -969,9 +969,13 @@ body {
   display: none;
 }
 
+.goog-te-menu-frame {
+  display: none;
+}
 .goog-te-menu-frame.open {
-  left: 0;
+  left: 0 !important;
   top: 150px;
+  display: block !important;
 }
 
 .viewport .openy-gtranslate {
