--- a/themes/openy_themes/openy_rose/scss/modules/_header.scss
+++ b/themes/openy_themes/openy_rose/scss/modules/_header.scss
@@ -169,6 +169,7 @@
   }
   .is-camp &__main-menu,
   &__main-menu {
+    top: 0;
 
     a {
       @include cachet();
@@ -226,14 +227,16 @@
   background-color: $blue;
 
   .viewport & {
-    height: $top-nav-height;
+    min-height: $top-nav-height;
     border-bottom: none;
-    min-height: 165px;
   }
 
   .viewport &.affix {
+    min-height: $minimized-nav-height;
     height: $minimized-nav-height;
-    min-height: 42px;
+    .page-head__main-menu {
+      top: 0;
+    }
   }
 
   .navbar-default {
@@ -465,14 +468,14 @@
 .viewport {
   .nav-global {
     > .container > .row {
-      height: $top-nav-height;
+      min-height: $top-nav-height;
       position: relative;
 
       .header-content {
         bottom: 0;
         position: absolute;
-        height: $top-nav-height;
-        min-height: 165px;
+        min-height: $top-nav-height;
+
       }
     }
   }
@@ -553,5 +556,13 @@
     .top-navs {
       margin-left: 150px;
     }
+  }
+}
+
+// Google translate styles.
+.translated-ltr,
+.translated-rtl {
+  .top-navs {
+    margin-top: 40px;
   }
 }
