--- a/themes/openy_themes/openy_lily/sass/misc/_header.scss
+++ b/themes/openy_themes/openy_lily/sass/misc/_header.scss
@@ -616,3 +616,16 @@ header#page-head {
 .landing-header {
   margin-bottom: 20px;
 }
+
+// Google translate styles.
+.translated-ltr,
+.translated-rtl {
+  header#page-head .top-navs {
+    .nav-global {
+      margin-top: 39px !important;
+    }
+    .nav-wrapper .main-nav.affix {
+      top: 92px;
+    }
+  }
+}
