OS-28: add structure for social post list.

--- a/themes/openy_themes/openy_rose/css/styles.css
+++ b/themes/openy_themes/openy_rose/css/styles.css
@@ -7569,6 +7569,24 @@ article .node--view-mode-flexible-content h2 a span {
   font-size: 22px;
 }
 
+.social-post-list .header .description {
+  margin-bottom: 30px;
+}
+.social-post-list .views-element-container .row {
+  margin-bottom: 10px;
+}
+.social-post-list .views-element-container .col {
+  /*margin: 0 10px 10px 0;*/
+  background: #fff;
+  padding: 10px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  -webkit-box-shadow: 2px 2px 5px 1px rgba(135, 135, 135, 0.43);
+  -moz-box-shadow: 2px 2px 5px 1px rgba(135, 135, 135, 0.43);
+  box-shadow: 2px 2px 5px 1px rgba(135, 135, 135, 0.43);
+}
+
 .paragraph-1c-wrapper {
   padding-bottom: 30px;
 }
