--- a/themes/openy_themes/openy_rose/scss/styles.scss
+++ b/themes/openy_themes/openy_rose/scss/styles.scss
@@ -50,6 +50,7 @@
 @import 'modules/breadcrumbs';
 @import 'modules/video';
 @import 'modules/event';
+@import 'modules/social-post';
 
 // Paragraphs
 @import 'paragraphs/1c';
